objects/Cloud_Billing_Exception__c.object
<CustomObject>
    <description>Object to store information about why a Rolled Up Usage Record could not be processed.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contract__r.Account_Name__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Setup</label>
        <referenceTo>GCR_Content_Document_Detail__c</referenceTo>
        <relationshipLabel>Billing Exceptions</relationshipLabel>
        <relationshipName>Cloud_Billing_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Any free test information about why the activity could not be rated.</description>
        <inlineHelpText>Why the activity could not be rated.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>This is used to define the type of the exception.</description>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Calling Rate Unavailable</fullName>
                </value>
                <value>
                    <fullName>Contract Expired</fullName>
                </value>
                <value>
                    <fullName>Contract Not Approved</fullName>
                </value>
                <value>
                    <fullName>Contract Not Yet Active</fullName>
                </value>
                <value>
                    <fullName>Contract Unavailable</fullName>
                </value>
                <value>
                    <fullName>Inbound Calling Rate Unavailable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Quantity Unavailable</fullName>
                </value>
                <value>
                    <fullName>Service Not Contracted</fullName>
                </value>
                <value>
                    <fullName>Service Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <formula>Rolled_Up_Usage_Data__r.Processed__c</formula>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rolled_Up_Usage_Data__c</fullName>
        <description>Activity Causing the billing exception</description>
        <inlineHelpText>Activity Causing the billing exception</inlineHelpText>
        <label>Rolled Up Usage Data</label>
        <referenceTo>Rolled_Up_Usage_Data__c</referenceTo>
        <relationshipName>Cloud_Billing_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipName>Cloud_Billing_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Start_Time__c</fullName>
        <formula>Rolled_Up_Usage_Data__r.Start_Time__c</formula>
        <label>Usage Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Billing Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rolled_Up_Usage_Data__c</columns>
        <columns>Account__c</columns>
        <columns>Resolved__c</columns>
        <columns>Description__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Finance_View</fullName>
        <columns>Rolled_Up_Usage_Data__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Finance View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_No_Service</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Description__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Rolled_Up_Usage_Data__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exception_Type__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All No Service</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Not_Contracted</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Description__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Rolled_Up_Usage_Data__c</columns>
        <columns>Service__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exception_Type__c</field>
            <operation>equals</operation>
            <value>Service Not Contracted</value>
        </filters>
        <label>Service Not Contracted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Unavailable</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Description__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Rolled_Up_Usage_Data__c</columns>
        <columns>Usage_Start_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exception_Type__c</field>
            <operation>equals</operation>
            <value>Service Unavailable</value>
        </filters>
        <label>Service Unavailable</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Exp-{0000000}</displayFormat>
        <label>Billing Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>